# homeauto-arduino

./: CMakeLists.txt  CMakeLists.txt.manual  README.md
src/main/libraries/CCS811Reader/: CCS811Reader.cpp  CCS811Reader.h
src/main/libraries/EnvData/: EnvData.h
src/main/libraries/Esp8266RemoteStation/: Esp8266RemoteStation.cpp  Esp8266RemoteStation.h
src/main/libraries/PinStateCallback/: PinStateCallback.cpp  PinStateCallback.h
src/main/sketches/esp8266_bme280/: esp8266_bme280.ino
src/main/sketches/esp8266_bme280_ccs811/: esp8266_bme280_ccs811.ino
src/main/sketches/esp8266_dht/: esp8266_dht.ino
src/main/sketches/mechanical_room/: mechanical_room.ino
src/main/sketches/range_hood_esp8266/: range_hood_esp8266.ino  resources.txt
